--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -33,7 +33,7 @@
             <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_info"
-                android:title="about"></item>
+                android:title="About us"></item>
         </menu>
     </item>
 </menu>
